--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3"
+  },
+  "dependencies": {
+    "async-sema": "^3.1.1",
+    "semaphore-throughput": "^1.0.2"
   }
 }
