Remove unused deps

--- a/package.json
+++ b/package.json
@@ -15,8 +15,5 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3"
   },
-  "dependencies": {
-    "async-sema": "^3.1.1",
-    "semaphore-throughput": "^1.0.2"
-  }
+  "dependencies": {}
 }
