--- a/.editorconfig
+++ b/.editorconfig
@@ -15,3 +15,6 @@ ij_javascript_keep_blank_lines_in_code = 1
 ij_javascript_spaces_within_object_literal_braces = true
 ij_javascript_spaces_within_imports = true
 ij_javascript_use_double_quotes = false
+
+[*.html]
+indent_size = 2
