--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "serve": "docker compose up"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "typescript": "^4.5.2"
+  }
 }
