--- a/.editorconfig
+++ b/.editorconfig
@@ -17,5 +17,8 @@ ij_javascript_spaces_within_object_literal_braces = true
 ij_javascript_spaces_within_imports = true
 ij_javascript_use_double_quotes = false
 
+[*.css]
+indent_size = 2
+
 [*.html]
 indent_size = 2
